--- a/springCore/pom.xml
+++ b/springCore/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>3.2.13.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
